# VibeSpec_Gate-skill

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  security_review_feedback.yml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
docs/: README.md
docs/design/: design_review_and_optimization.md  lite_login_security_optimization_plan.md  lite_skill_next_optimization_plan.md  lite_skill_package_manifest.md  lite_skill_productization_plan.md  lite_skill_rc_hardening_plan.md  lite_skill_release_validation_plan.md  model_invocation_strategy.md  mvp_scope.md  threat_model.md
docs/maintainers/: fixture_authoring.md  host_agent_calibration.md  lite_external_pilot_protocol.md  lite_package_verification.md  llm_quality_scoring.md  release_boundary_cleanup.md  release_verification.md
docs/research/: research_notes.md
docs/usage/: agent_review_cookbook.md  examples.md  lite_quickstart.md  llm_quality_human_review.md  llm_review_contract.md  quickstart.md  verification.md
evals/: behavior_cases.yaml  protocol.md  trigger_cases.yaml
evals/fixtures/: empty-project.fixture.json  truncated-project.fixture.json
examples/: lite_review_prompt.md  synthetic_review_example.md
scripts/: build_evaluation_matrix.py  build_lite_package_zip.py  build_lite_review_bundle.py  build_llm_quality_matrix.py  build_llm_review_workspace.py  build_phase11_host_agent_prompts.py  build_phase11_human_review_drafts.py  compare_host_agent_samples.py  configure_github_repository.ps1  import_phase11_host_agent_sample.py  import_phase11_human_review.py  run_lite_rc_hardening.py  run_lite_release_validation.py  run_skill_blackbox_evals.py  score_llm_review_outputs.py  smoke_install_skill.py  stub_llm_review_outputs.py  validate_llm_review_outputs.py  verify_lite_package.py  verify_phase11_calibration.py  verify_phase4_5_smoke.py  verify_release.py  verify_release_metadata.py  verify_skill_evals.py
skill/: SKILL.md
skill/checklists/: auth_data_checklist.md  deployment_checklist.md  intake_checklist.md  llm_agent_security_checklist.md  (+2 more)
tests/: test_auth_data_scanner.py  test_cli_path_safety.py  test_evaluation_cases.py  test_gate_decision.py  test_lite_package_verifier.py  test_lite_rc_hardening.py  test_lite_release_validation.py  test_lite_review_bundle.py  test_llm_agent_scanner.py  test_llm_output_adversarial_quality.py  test_llm_output_quality.py  test_llm_review_workspace.py  test_loop_runner.py  test_phase11_calibration_verifier.py  test_phase11_host_agent_prompts.py  test_phase11_host_agent_sample_importer.py  test_phase11_human_review_drafts.py  test_phase11_human_review_importer.py  test_project_intake.py  test_release_hardening.py  test_release_metadata.py  test_report_builder.py  test_review_cli.py  test_review_runner.py  test_secret_scanner.py  test_skill_blackbox_runner.py  test_skill_evals.py  test_skill_install.py
(+527 files in other folders)
