[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesec-gate"
version = "0.1.0"
description = "LLM-native security review Skill for vibe-coded products."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill"
Repository = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill"
Issues = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill/issues"
Documentation = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill/tree/master/docs"

[project.scripts]
vibesec = "vibesec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibesec = ["templates/**/*.md", "templates/**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
