[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibespec-gate"
version = "0.2.0rc2"
description = "Launch-blocking security review for vibe-coded products."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill"
Repository = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill"
Issues = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill/issues"
Documentation = "https://github.com/haoran3160-afk/VibeSpec_Gate-skill/tree/master/docs"

[project.scripts]
vibespec-gate = "vibespec_gate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibespec_gate = ["templates/**/*.md", "templates/**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
